spacing fixes

--- a/dev/styles/components/_flashcard.scss
+++ b/dev/styles/components/_flashcard.scss
@@ -30,7 +30,6 @@
 .taskShort,
 .taskLong {
     color: #114dce;
-    padding: 10px;
 }
 
 
@@ -53,7 +52,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 10px 5px;
     border: 10px solid rgb(236, 234, 248);
     box-shadow: inset 0 0 0 3px #114dce,
     5px 5px 10px #ccc;
@@ -65,7 +64,6 @@
 }
 
 .flashcard:hover .cardName,
-.flashcard:focus .cardName,
-.flashcard:target .cardName, {
+.flashcard:focus .cardName {
     transform:rotateY(-180deg);
 }
