--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -134,8 +134,12 @@ button {
 
 button:hover,
 button:focus {
-    transform: scale(1.2);
+    transform: scale(0.95);
 }
+
+// button:active {
+//     transform: scale(0.95);
+// }
 
 footer {
     padding: 20px 0;
